--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="${MAPS_API_KEY}" />
+            android:value="AIzaSyDqMHeLa2yQck912F78zl4SFbmK6kND1zI" />
 
         <meta-data
             android:name="com.google.android.gms.version"
